js platform selector update

--- a/docs/amplify-theme/_layouts/default.html
+++ b/docs/amplify-theme/_layouts/default.html
@@ -107,6 +107,7 @@
 										<a href={{ item.url }}>{{ item.title }}</a>
 									{% endfor %}
 								</div>
+								<div class="arrows"></div>
 							</div>
 							<!-- <div class="js-library-selector">
 								<img id="js-library-icon" /> 
