update notification bar for the survey

--- a/docs/amplify-theme/_includes/site-header.html
+++ b/docs/amplify-theme/_includes/site-header.html
@@ -2,7 +2,12 @@
 <div class="notification-bar" id="notification-bar">
 	<div class="notification-content">
 		<img class="notification-image" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/icons/Medium/Volume.svg">
-		<p class="notification-text">Announcing the AWS Amplify CLI toolchain. Click <a href="https://aws.amazon.com/blogs/mobile/announcing-the-aws-amplify-cli-toolchain/" target="_blank">here</a> to read more.</p>
+		<p class="notification-text">
+			Participate our  
+			<a href="https://amazonmr.au1.qualtrics.com/jfe/form/SV_eQGqGzojpqthVoV" target="_blank">
+				2018 AWS Amplify JavaScript Developer Survey
+			</a>
+		</p>
 	</div>
 	<div class="close-button">
 		<i id="close-notif" class="icon icon--x"></i>
