--- a/docs/amplify-theme/_sass/components/_redesign.scss
+++ b/docs/amplify-theme/_sass/components/_redesign.scss
@@ -3076,8 +3076,7 @@ li {
     background-color: white;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    border: 1px solid black;
-    border-top: none;
+    box-shadow: 1px 1px 5px rgba(0,0,0,.3);
     height: 30px;
     padding: 0px 10px;
 
@@ -3091,12 +3090,14 @@ li {
 
         p {
             display: inline-block;
-            color: black;
+            color: #232F3E;
+            margin: 0;
         }
 
         img {
             height: 24px;
             vertical-align: middle;
+            filter: opacity(75%);
         }
     
         #twitter-logo {
@@ -3104,7 +3105,7 @@ li {
             position: relative;
             bottom: 2px;
             left: 5px;
-            filter: brightness(0);
+            filter: brightness(0) opacity(75%);
         }
     }
 
