anchor link fix

--- a/docs/amplify-theme/_layouts/default.html
+++ b/docs/amplify-theme/_layouts/default.html
@@ -59,7 +59,7 @@
 							</div>
 						</div>
 						<div class="sections-list-wrapper">
-							<div class="sections-list js-affix js-scrollspy">
+							<div class="sections-list js-affix js-scrollspy sections-list-notif-check">
 								<div class="dev-guide"> 
 									{% if site.category_list %}
 										{% for category in site.category_list %}
