--- a/docs/amplify-theme/_sass/components/_redesign.scss
+++ b/docs/amplify-theme/_sass/components/_redesign.scss
@@ -2226,6 +2226,14 @@ li {
             margin-top: 20px !important;
         }
 
+        .styleguide-affix-notif {
+            margin-top: 75px !important;
+        }
+
+        .sections-list-notif {
+            margin-top: 150px !important;
+        }
+
         .version-section {
 
             @media (max-width: 828px) {
